<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Daily Selfie</string>
    
<!--     Action bar menu items -->
    <string name="camera">Camera</string>
    <string name="settings">Settings</string>
    
<!--     Thumbnail list delete item -->
    <string name="alert_delete_message">Are you sure you want to delete this selfie?</string>
    <string name="alert_delete_confirm">Yes</string>
    <string name="alert_delete_cancel">No</string>
    <string name="alert_delete_ack">The selfie was deleted!</string>
    
<!-- Username Preference -->
    <string name="username_preference_title">User name</string>
    <string name="username_preference_dialog_title">Change user name</string>
    <string name="username_preference_dialog_message">Enter your user name:</string>    
    <string name="username_preference_dialog_positive">Submit</string>
    <string name="username_preference_dialog_negative">Cancel</string>
    
<!-- Selfie alarm preference -->
	<string name="selfie_alarm_category_title">Selfie Reminder</string>
	
	<string name="selfie_alarm_list_title">Selfie reminder interval</string>
	
	<string name="selfie_alarm_checkbox_title">Enable selfie reminders</string>
	
	<string name="selfie_alarm_notification_ticker">¿¿¿Ticker???</string>
	
	<string name="selfie_alarm_notification_title">Daily Selfie</string>
	
	
	<string name="selfie_alarm_notification_content_text">Time for a new selfie!</string>
	    
</resources>
