<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="@+id/pref_screen" >

    <EditTextPreference
        android:key="username"
        android:title="@string/username_preference_title"
        android:dialogTitle="@string/username_preference_dialog_title"
        android:dialogMessage="@string/username_preference_dialog_message"
        android:negativeButtonText="@string/username_preference_dialog_negative"
        android:positiveButtonText="@string/username_preference_dialog_positive" >
    </EditTextPreference>
    
    <PreferenceCategory
        android:title="@string/selfie_alarm_category_title" >
        
        <CheckBoxPreference 
            android:key="alarm_time_checkbox_preference"
            android:title="@string/selfie_alarm_checkbox_title" >
        </CheckBoxPreference>
        
        <ListPreference
            android:key="alarm_time_list_preference"
            android:title="@string/selfie_alarm_list_title"
            android:entries="@array/alarm_time_list_preference_entries"
            android:entryValues="@array/alarm_time_list_preference_values"
            android:defaultValue="@array/alarm_time_list_preference_values" >
		</ListPreference>
    
    </PreferenceCategory>
    

</PreferenceScreen>
